modifico llamado a método 'specialAttack' que había quedado mal escrito

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <section class="row controls" v-else>
             <div class="small-12 columns">
                 <button id="atacar" @click="attack">ATACAR</button>
-                <button id="ataque-especial" @click="specialAtack">ATAQUE ESPECIAL</button>
+                <button id="ataque-especial" @click="specialAttack">ATAQUE ESPECIAL</button>
                 <button id="curar" @click="heal">CURAR</button>
                 <button id="rendirse" @click="giveUp">RENDIRSE</button>
             </div>
